[basic] update dependencies